@@ -1,3 +1,10 @@
+Future Build 210
+Application Changes:
+- Added a new improvement type that can disable a skill group selected by the user. To be used by RunnerHub customdata ruleset. 
+
+New Strings:
+- String_DisableSkillGroupPrompt
+
 Build 209
 
 Application Changes:
